V 0.2 Ajout de la fonction de calcul d'indice Utilisation de "Partie" a la place des "Cases" dans affichage Ajout d'une version d'initialisationGrilleInt pour les Char

--- a/hanjie.cbp
+++ b/hanjie.cbp
@@ -39,6 +39,10 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="fichiers.h" />
+		<Unit filename="fonctions.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="fonctions.h" />
 		<Unit filename="hanjie.c">
 			<Option compilerVar="CC" />
 		</Unit>
@@ -46,6 +50,10 @@
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="menu.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="menu.h" />
 		<Unit filename="structures.c">
 			<Option compilerVar="CC" />
 		</Unit>
