Ajout de la sauvegarde et nettoyage du code

--- a/hanjie.cbp
+++ b/hanjie.cbp
@@ -47,6 +47,10 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="hanjie.h" />
+		<Unit filename="librairies/tpl.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="librairies/tpl.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
